申請取り消し機能実装